add button controls
button allowing user to select rock, paper or scissors

--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock, paper, scissors</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <script src="main.js" defer></script>
-</body>
+    <div class="page-container">
+      <section>
+        <button>rock</button>
+        <button>paper</button>
+        <button>scissors</button>
+      </section>
+    </div>
+  </body>
 </html>
