--- a/index.html
+++ b/index.html
@@ -9,10 +9,24 @@
   <body>
     <script src="main.js" defer></script>
     <div class="page-container">
+      <div class="results">
+        <div class="scoreDiv">
+          <h3 class="playerScore">You: 0</h3>
+          <h3 class="computerScore">Comp: 0</h3>
+        </div>
+        <div class="choiceDiv">
+          <h3>You Chose: </h3>
+          <h3>Comp Chose: </h3>
+        </div>
+        <div class="resultsDiv">
+          <h3>...</h3>
+        </div>
+      </div>
+
       <section>
-        <button>rock</button>
-        <button>paper</button>
-        <button>scissors</button>
+        <button class="playerActionBtn">rock</button>
+        <button class="playerActionBtn">paper</button>
+        <button class="playerActionBtn">scissors</button>
       </section>
     </div>
   </body>
